fixed alignment css issue with mobile nav bar menu

--- a/src/style/AppContainer.css
+++ b/src/style/AppContainer.css
@@ -5,6 +5,7 @@
     font-family: 'Sora', sans-serif;
 }
 
+.home,
 .about,
 .services,
 .sign-up {
