--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -86,12 +86,13 @@
     .nav-menu {
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
         width: 100%;
         height: 90vh;
         position: absolute;
         top: 80px;
         left: -100%;
-        opacity: -1;
+        opacity: 1;
         transition: all 0.5s ease;
     }
 
